--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,6 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
     { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/frontend/dist/$1" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
